Do not automatically refresh on "start" of activity; use a Refresh action bar item instead.

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -3,5 +3,6 @@
 
     <string name="hello">Hello World, MPassActivity!</string>
     <string name="app_name">Password Safe</string>
+  <string name="refresh">Refresh</string>
 
 </resources>
